# backend

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/Dto/request/: CreateNewsRequest.py
backend/Entity/: BaseEntity.py  NewsEntity.py
backend/Exceptions/: SybolsException.py
backend/controller/rest/: router.py
backend/core/: config.py
