[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mikhail <podbereznikov34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = {extras = ["standart"], version = "^0.30.3"}
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
